--- a/mailer/templates/newsletter.html
+++ b/mailer/templates/newsletter.html
@@ -4,14 +4,39 @@
     <title></title>
     <style type="text/css">
         /* CLIENT-SPECIFIC STYLES */
-        body, table, td, a { -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-        table, td { mso-table-lspace: 0pt; mso-table-rspace: 0pt; }
-        img { -ms-interpolation-mode: bicubic; }
+        body, table, td, a {
+            -webkit-text-size-adjust: 100%;
+            -ms-text-size-adjust: 100%;
+        }
+
+        table, td {
+            mso-table-lspace: 0pt;
+            mso-table-rspace: 0pt;
+        }
+
+        img {
+            -ms-interpolation-mode: bicubic;
+        }
 
         /* RESET STYLES */
-        img { border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none; }
-        table { border-collapse: collapse !important; }
-        body { height: 100% !important; margin: 0 !important; padding: 0 !important; width: 100% !important; }
+        img {
+            border: 0;
+            height: auto;
+            line-height: 100%;
+            outline: none;
+            text-decoration: none;
+        }
+
+        table {
+            border-collapse: collapse !important;
+        }
+
+        body {
+            height: 100% !important;
+            margin: 0 !important;
+            padding: 0 !important;
+            width: 100% !important;
+        }
 
         /* iOS BLUE LINKS */
         a[x-apple-data-detectors] {
@@ -47,7 +72,9 @@
         }
 
         /* ANDROID CENTER FIX */
-        div[style*="margin: 16px 0;"] { margin: 0 !important; }
+        div[style*="margin: 16px 0;"] {
+            margin: 0 !important;
+        }
     </style>
 </head>
 <body style="margin: 0 !important; padding: 0; !important background-color: #ffffff;" bgcolor="#ffffff">
@@ -59,7 +86,8 @@
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
-        <td align="center" valign="top" width="100%" background="bg.jpg" bgcolor="#3b4a69" style="background: #3b4a69; background-size: cover; padding: 50px 15px;" class="mobile-padding">
+        <td align="center" valign="top" width="100%" background="bg.jpg" bgcolor="#3b4a69"
+            style="background: #3b4a69; background-size: cover; padding: 50px 15px;" class="mobile-padding">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
                 <tr>
@@ -67,7 +95,8 @@
             <![endif]-->
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
                 <tr>
-                    <td align="center" valign="top" style="padding: 0; font-family: Open Sans, Helvetica, Arial, sans-serif;">
+                    <td align="center" valign="top"
+                        style="padding: 0; font-family: Open Sans, Helvetica, Arial, sans-serif;">
                         <h1 style="font-size: 40px; color: #ffffff;">Golang Coach Newsletter</h1>
                         <p style="color: #b7bdc9; font-size: 20px; line-height: 28px; margin: 0;">
                             This is an opinionated catalog of open source Golang packages.
@@ -83,7 +112,8 @@
         </td>
     </tr>
     <tr>
-        <td align="center" height="100%" valign="top" width="100%" bgcolor="#f6f6f6" style="padding: 50px 15px;" class="mobile-padding">
+        <td align="center" height="100%" valign="top" width="100%" bgcolor="#f6f6f6" style="padding: 50px 15px;"
+            class="mobile-padding">
             <!--[if (gte mso 9)|(IE)]>
             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
                 <tr>
@@ -91,22 +121,26 @@
             <![endif]-->
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
                 <tr>
-                    <td align="center" valign="top" style="padding: 0 0 25px 0; font-family: Open Sans, Helvetica, Arial, sans-serif;">
-                        {{range .}}
+                    <td align="center" valign="top"
+                        style="padding: 0 0 25px 0; font-family: Open Sans, Helvetica, Arial, sans-serif;">
+                    {{range .}}
                         <table cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
                                 <td align="center" bgcolor="#ffffff" style="border-radius: 3px 3px 0 0;">
-                                    <img src="{{.Image}}" width="600" height="200" alt="insert alt text here" style="display: block; border-radius: 3px 3px 0 0; font-family: sans-serif; font-size: 16px; color: #999999;" class="img-max"/>
+                                    <img src="{{.Image}}" width="600" height="200" alt="insert alt text here"
+                                         style="display: block; border-radius: 3px 3px 0 0; font-family: sans-serif; font-size: 16px; color: #999999;"
+                                         class="img-max"/>
                                 </td>
                             </tr>
                             <tr>
                                 <td align="center" bgcolor="#ffffff" style="border-radius: 0 0 3px 3px; padding: 25px;">
                                     <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                         <tr>
-                                            <td align="center" style="font-family: Open Sans, Helvetica, Arial, sans-serif;">
+                                            <td align="center"
+                                                style="font-family: Open Sans, Helvetica, Arial, sans-serif;">
                                                 <h2 style="font-size: 20px; color: #444444; margin: 0; padding-bottom: 10px;">{{.Name}}</h2>
                                                 <p style="color: #999999; font-size: 16px; line-height: 24px; margin: 0;">
-                                                    {{.Content}}
+                                                {{.Content}}
                                                 </p>
                                             </td>
                                         </tr>
@@ -114,8 +148,11 @@
                                             <td align="center" style="padding: 30px 0 0 0;">
                                                 <table border="0" cellspacing="0" cellpadding="0">
                                                     <tr>
-                                                        <td align="center" style="border-radius: 26px;" bgcolor="#75b6c9">
-                                                            <a href="{{.Url}}" target="_blank" style="font-size: 16px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 26px; background-color: #75b6c9; padding: 14px 26px; border: 1px solid #75b6c9; display: block;">Read more &rarr;</a>
+                                                        <td align="center" style="border-radius: 26px;"
+                                                            bgcolor="#75b6c9">
+                                                            <a href="{{.Url}}" target="_blank"
+                                                               style="font-size: 16px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 26px; background-color: #75b6c9; padding: 14px 26px; border: 1px solid #75b6c9; display: block;">Read
+                                                                more &rarr;</a>
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -125,7 +162,7 @@
                                 </td>
                             </tr>
                         </table>
-                        {{end}}
+                    {{end}}
                     </td>
                 </tr>
             </table>
